--- a/views/public/donate.pug
+++ b/views/public/donate.pug
@@ -10,45 +10,15 @@ block content
         h5.fw(style="font-size:18px") The donation is done securely through Stripe.
         h5.fw(style="font-size:18px") NewTube never sees your card info, it goes directly to Stripe through their technology
         br
+        h5.fw(style="font-size:22px;margin-bottom:34px;") Thank you for any and all donations, your support is the backbone of this project!
 
-        h3.fw Enter Donation Amount (USD):
+        h3.fw Donation Amount (USD):
         h3.fw
             form
                 input.donationAmount.decimal(type="number" style="width:120px;height:36px;border-radius:4px;color:black;" min='5')
                 br
                 button#customButton.btn-btn-md.btn-success(type="submit" style="margin-top:2px;border-radius:4px;") Donate
 
-
-    //p Thank you for donating!
-    //form(method='POST' action='')
-    //    div
-    //        label(for='name') Name:
-    //        input#name(type='text' name='name')
-    //
-    //    div
-    //        label(for='email') Email address:
-    //        input#email(type='email' name='email')
-    //
-    //    div
-    //        label(for='amount') Amount:
-    //        input#amount(type='number' name='amount' min='10')
-    //
-    //    div
-    //        button(type='submit') Next
-    //
-    //
-    //
-    //
-    //h1 Complete your donation
-    //p= 'Thank you, ' + name + ', for your generosity! Please enter your payment details below to complete your donation.'
-    //form(method='POST' action='/donate/thanks')
-    //    div
-    //        label(for='cardholder-name') Cardholder name:
-    //        input#cardholder-name(type='text' name='cardholder-name' value=(name))
-    //    div#card-element
-    //    div#card-errors
-    //    div
-    //        button#card-button(data-secret=(intentSecret))= ('Donate $' + amount)
 
     script(src='https://checkout.stripe.com/checkout.js')
 
@@ -61,12 +31,6 @@ block content
           return false;
         }
       });
-
-      function hasDecimalPlace(value, x) {
-        var pointIndex = value.indexOf('.');
-        return pointIndex >= 0 && pointIndex < value.length - x;
-      }
-
 
       var stripeToken = '#{stripeToken}'
 
