add paypal button

--- a/views/public/donate.pug
+++ b/views/public/donate.pug
@@ -19,6 +19,11 @@ block content
                 br
                 button#customButton.btn-btn-md.btn-success(type="submit" style="margin-top:2px;border-radius:4px;") Donate
 
+        br
+        br
+        h4.fw(style="font-size:22px") You can also donate through
+            a(href="https://newtube.app/paypal" style="margin-left:6px") PayPal
+
 
     script(src='https://checkout.stripe.com/checkout.js')
 
