finish donation functionality

--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -277,7 +277,7 @@ style.
         i.ib.fa.fa-question-circle(aria-hidden='true')
         p.ib About #{brandName} &nbsp
 
-    a(href='https://newtube.app/paypal' style="color:#007bff;")
+    a(href='https://newtube.app/donate' style="color:#007bff;")
         i.ib.fas.fa-dollar-sign
         p.ib &nbsp Support NewTube
 
@@ -335,7 +335,7 @@ style.
 
 
             // support newtube link
-            a(href="https://newtube.app/paypal" style="color:#007bff")
+            a(href="https://newtube.app/donate" style="color:#007bff")
 
                 if user && user.plan == 'plus'
                     h7.ib(style="position: absolute;top: 62px;right: 50px; 50px;font-size: 13px;")
