--- a/views/public/donate.pug
+++ b/views/public/donate.pug
@@ -1,28 +1,43 @@
 extends ../layout
 
 block content
+    style.
+        .thankYouFollower {
+            max-width: 500px;
+            margin: 0 auto;
+            margin-top: 32px;
+        }
+
     br
     div.center-block.text-center.col-sm-12.pageContainer(style="overflow-x: hidden;margin-top:-21px;")
 
+        div.stillToDonate
 
-        h1.fw(style="margin-bottom:21px") Donate
+            h1.fw(style="margin-bottom:21px") Donate
 
-        h5.fw(style="font-size:18px") The donation is done securely through Stripe.
-        h5.fw(style="font-size:18px") NewTube never sees your card info, it goes directly to Stripe through their technology
-        br
-        h5.fw(style="font-size:22px;margin-bottom:34px;") Thank you for any and all donations, your support is the backbone of this project!
+            h5.fw(style="font-size:18px") The donation is done securely through Stripe.
+            h5.fw(style="font-size:18px") NewTube never sees your card info, it goes directly to Stripe through their technology
+            br
+            h5.fw(style="font-size:22px;margin-bottom:34px;") Thank you for any and all donations, your support is the backbone of this project!
 
-        h3.fw Donation Amount (USD):
-        h3.fw
-            form
-                input.donationAmount.decimal(type="number" style="width:120px;height:36px;border-radius:4px;color:black;" min='5')
-                br
-                button#customButton.btn-btn-md.btn-success(type="submit" style="margin-top:2px;border-radius:4px;") Donate
+            h3.fw Donation Amount (USD):
+            h3.fw
+                form
+                    input.donationAmount.decimal(type="number" style="width:120px;height:36px;border-radius:4px;color:black;" min='5')
+                    br
+                    button#customButton.btn-btn-md.btn-success(type="submit" style="margin-top:2px;border-radius:4px;") Donate
 
-        br
-        br
-        h4.fw(style="font-size:22px") You can also donate through
-            a(href="https://newtube.app/paypal" style="margin-left:6px") PayPal
+            br
+            br
+            h4.fw(style="font-size:22px") You can also donate through
+                a(href="https://newtube.app/paypal" style="margin-left:6px") PayPal
+
+
+        div.thankYouDiv(style="display:none;margin-top:100px;overflow:hidden;")
+            h1.fw Thank you for your support, I highly appreciate it!
+
+            h3.fw.thankYouFollower With these funds I can continue to expand the project and deliver a great service for humanity, thanks for contributing to that.
+
 
 
     script(src='https://checkout.stripe.com/checkout.js')
@@ -72,6 +87,9 @@ block content
             success: function (data) {
               if (data == 'success') {
                 // window.location = "/account?to=nt-plus";
+                $('.thankYouDiv').show()
+                $('.stillToDonate').hide()
+
               } else {
                 swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
               }
