--- a/views/public/donate.pug
+++ b/views/public/donate.pug
@@ -43,6 +43,12 @@ block content
     script(src='https://checkout.stripe.com/checkout.js')
 
     script.
+
+      function hasDecimalPlace(value, x) {
+        var pointIndex = value.indexOf('.');
+        return pointIndex >= 0 && pointIndex < value.length - x;
+      }
+
       $('.decimal').keypress(function (e) {
         var character = String.fromCharCode(e.keyCode)
         var newValue = this.value + character;
